<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.ms_lab4_belarus.MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:id="@+id/linear0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/show"
            tools:text="@string/show" />

        <Button
            android:id="@+id/button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/groupByArea"
            tools:text="@string/groupByArea" />
    </LinearLayout>

    <View
        android:id="@+id/view0"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_agreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/agreg_param"
            android:background="@android:color/white"
            android:popupBackground="@android:color/white" />

        <Button
            android:id="@+id/button_agreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/agregation"
            tools:text="@string/agregation" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/sort_param"
            android:background="@android:color/white"
            android:popupBackground="@android:color/white" />

        <Button
            android:id="@+id/button_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/sorting"
            tools:text="@string/sorting" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="40dp" />



    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_filter_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/region_filter"
            tools:text="@string/region_filter" />

        <Button
            android:id="@+id/button_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/district_filter"
            tools:text="@string/district_filter" />

        <EditText
            android:id="@+id/editText_filer_population"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/population"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:text="Enter popilation..." />

    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="40dp" />




</LinearLayout>
